objects/ASI_CRM_Promotion_Mechanic__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Ad_hoc_Cash__c</fullName>
        <label>Ad-hoc ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Additional_SKU_Bottle_Qty__c</fullName>
        <label>Additional SKU (Bottle Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Additional_SKU_POSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional SKU / POSM</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Promotion Mechanics (Additional SKU / POSM)</relationshipLabel>
        <relationshipName>Promotion_Mechanics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Size_Additional__c</fullName>
        <label>Bottle Size (Additional)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Size_Promotional__c</fullName>
        <label>Bottle Size (Promotional)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_9L__c</fullName>
        <formula>IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;),
   ASI_CRM_Packaging_Size_Promotional__c ,
   1
) * ASI_CRM_Bottle_Size_Promotional__c * ASI_CRM_Buy_Qty__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_Qty__c</fullName>
        <label>Buy (Qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_Unit__c</fullName>
        <label>Buy (Unit)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gift_Voucher_Value_Cash__c</fullName>
        <label>Gift Voucher Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gift_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Voucher</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Promotion Mechanics (Gift Voucher)</relationshipLabel>
        <relationshipName>Promotion_Mechanics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IGC_Cost_Case_Promotional__c</fullName>
        <label>IGC Cost/Case (Promotional)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Cash__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Incentive_per_Bottle_Cash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_FOC__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Incentive_per_Bottle_FOC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Other_in_Kind__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Incentive_per_Bottle_OtherInKind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Voucher__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Incentive_per_Bottle_Voucher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Incentive_Value_per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_Cash__c</fullName>
        <formula>ASI_CRM_Incentive_per_Bottle_Cash__c * 900 / ASI_CRM_Bottle_Size_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per 9L (Cash)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_FOC__c</fullName>
        <formula>ASI_CRM_Incentive_per_Bottle_FOC__c  * 900 / ASI_CRM_Bottle_Size_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per 9L (FOC)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_OIK__c</fullName>
        <formula>ASI_CRM_Incentive_per_Bottle_OtherInKind__c * 900 / ASI_CRM_Bottle_Size_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per 9L (Other in Kind)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_Voucher__c</fullName>
        <formula>ASI_CRM_Incentive_per_Bottle_Voucher__c * 900 / ASI_CRM_Bottle_Size_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per 9L (Voucher)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_Bottle__c * 900 / ASI_CRM_Bottle_Size_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per 9L</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_Bottle__c</fullName>
        <formula>(ASI_CRM_Trade_Deal_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Promotional__c +
 ASI_CRM_Additional_SKU_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Additional__c +
 ASI_CRM_Ad_hoc_Cash__c +
 ASI_CRM_Gift_Voucher_Value_Cash__c +
 ASI_CRM_Other_in_Kind_Cash__c
) /  
(
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Buy_Qty__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value per Bottle</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Volume_9L__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Bottle_Size_Promotional__c * ASI_CRM_Incentive_Volume_per_Unit__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Volume_per_Unit__c</fullName>
        <formula>( 
ASI_CRM_Trade_Deal_Bottle_Qty__c * ASI_CRM_Bottle_Size_Promotional__c + 
ASI_CRM_Additional_SKU_Bottle_Qty__c * ASI_CRM_Bottle_Size_Additional__c 
) / 
(
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Bottle_Size_Promotional__c * ASI_CRM_Buy_Qty__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Volume per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_per_Bottle_Cash__c</fullName>
        <formula>( 
ASI_CRM_Ad_hoc_Cash__c 
) / 
( 
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Buy_Qty__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive per Bottle (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_per_Bottle_FOC__c</fullName>
        <formula>(ASI_CRM_Trade_Deal_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Promotional__c + 
ASI_CRM_Additional_SKU_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Additional__c 
) / 
( 
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Buy_Qty__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive per Bottle (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_per_Bottle_OtherInKind__c</fullName>
        <formula>( 
ASI_CRM_Other_in_Kind_Cash__c 
) / 
( 
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Buy_Qty__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive per Bottle (Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_per_Bottle_Voucher__c</fullName>
        <formula>( 
ASI_CRM_Gift_Voucher_Value_Cash__c 
) / 
( 
IF( ISPICKVAL( ASI_CRM_Buy_Unit__c , &apos;Case&apos;), 
ASI_CRM_Packaging_Size_Promotional__c , 
1 
) * ASI_CRM_Buy_Qty__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive per Bottle (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mechanic_Description__c</fullName>
        <formula>&quot;Buy every &quot; + Text(ASI_CRM_Buy_Qty__c) + &quot; &quot; + Text(ASI_CRM_Buy_Unit__c) + &quot;s of &quot; +
if(!ISBLANK(ASI_CRM_Promotional_Sub_brand__c),
  &quot;Sub-brand &lt;b&gt;&quot; + ASI_CRM_Promotional_Sub_brand__r.Name + &quot;&lt;/b&gt; &quot;, 
  &quot;SKU &lt;b&gt;&quot; + ASI_CRM_Promotional_SKU__r.Name + &quot;&lt;/b&gt; &quot;
) +
&quot;Give:&lt;br/&gt;&quot; +
if(ASI_CRM_Trade_Deal_Bottle_Qty__c &lt;&gt; 0,
  &quot;- &quot; + if(ASI_CRM_Trade_Deal_Bottle_Qty__c &lt; 1, &quot;0&quot;, &quot;&quot;) + Text(ASI_CRM_Trade_Deal_Bottle_Qty__c) + &quot; bottles of &quot; + ASI_CRM_Promotional_SKU__r.Name + &quot;&lt;br/&gt;&quot;,
  &quot;&quot;
) +
if(ASI_CRM_Additional_SKU_Bottle_Qty__c &lt;&gt; 0,
  &quot;- &quot; + if(ASI_CRM_Additional_SKU_Bottle_Qty__c &lt; 1, &quot;0&quot;, &quot;&quot;) + Text(ASI_CRM_Additional_SKU_Bottle_Qty__c) + &quot; bottles of &quot; + ASI_CRM_Additional_SKU_POSM__r.Name + &quot;&lt;br/&gt;&quot;,
  &quot;&quot;
) +
if(ASI_CRM_Ad_hoc_Cash__c &lt;&gt; 0,
  &quot;- Ad-hoc $&quot; + if(ASI_CRM_Ad_hoc_Cash__c &lt; 1, &quot;0&quot;, &quot;&quot;) + Text(ASI_CRM_Ad_hoc_Cash__c) + &quot;&lt;br/&gt;&quot;,
  &quot;&quot;
) +
if(!ISBLANK(ASI_CRM_Gift_Voucher__c),
  &quot;- Voucher &quot; + ASI_CRM_Gift_Voucher__r.Name + &quot;&lt;br/&gt;&quot;,
  &quot;&quot;
) +
if(ASI_CRM_Other_in_Kind_Cash__c &lt;&gt; 0,
  &quot;- Other in Kind $&quot; + if(ASI_CRM_Other_in_Kind_Cash__c &lt; 1, &quot;0&quot;, &quot;&quot;) + Text(ASI_CRM_Other_in_Kind_Cash__c) + &quot; (&quot; + ASI_CRM_Remark__c + &quot;)&lt;br/&gt;&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Other_in_Kind_Cash__c</fullName>
        <label>Other in Kind ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size_Additional__c</fullName>
        <label>Packaging Size (Additional)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size_Promotional__c</fullName>
        <label>Packaging Size (Promotional)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Plan__c</fullName>
        <label>Promotion Plan</label>
        <referenceTo>ASI_CRM_Promotion_Plan__c</referenceTo>
        <relationshipLabel>Promotion Mechanics</relationshipLabel>
        <relationshipName>Promotion_Mechanics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotional_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Promotion Mechanics</relationshipLabel>
        <relationshipName>Promotion_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotional_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Promotion Mechanics</relationshipLabel>
        <relationshipName>Promotion_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ROI__c</fullName>
        <formula>1 - (
 (
  ASI_CRM_Trade_Deal_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Promotional__c +
  ASI_CRM_Additional_SKU_Bottle_Qty__c * ASI_CRM_RTM_WS_Price_Bottle_Additional__c +
  ASI_CRM_Ad_hoc_Cash__c +
  ASI_CRM_Gift_Voucher_Value_Cash__c +
  ASI_CRM_Other_in_Kind_Cash__c 
 ) / (
   ASI_CRM_Buy_Qty__c * ASI_CRM_IGC_Cost_Case_Promotional__c / 
   IF( ISPICKVAL(ASI_CRM_Buy_Unit__c, &apos;Bottle&apos;),  ASI_CRM_Packaging_Size_Promotional__c, 1)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTM_WS_Price_Bottle_Additional__c</fullName>
        <label>RTM WS Price/Bottle (Additional)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTM_WS_Price_Bottle_Promotional__c</fullName>
        <label>RTM WS Price/Bottle (Promotional)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Qty_Bottle__c</fullName>
        <label>Target Qty (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Value__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_RTM_WS_Price_Bottle_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_9L__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Bottle_Size_Promotional__c /
900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trade_Deal_Bottle_Qty__c</fullName>
        <label>Trade Deal (Bottle Qty)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Mechanic</label>
    <nameField>
        <displayFormat>PM-{YY}{MM}-{0000}</displayFormat>
        <label>Promotion Mechanic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Mechanics</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Promotion_Mechanic</fullName>
        <active>true</active>
        <label>SG Promotion Mechanic</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>